--- a/form.html
+++ b/form.html
@@ -107,10 +107,18 @@
           </div>
 
           <div>
-            <label for="cv" class="block mb-2 font-medium text-gray-300">Upload CV (PDF, max 2MB)</label>
+            <label for="cv" class="block mb-2 font-medium text-gray-300">Upload CV* (PDF, max 2MB)</label>
             <input type="file" id="cv" name="cv" accept=".pdf"
               class="w-full text-gray-300 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:font-semibold file:bg-red-600 file:text-white hover:file:bg-red-700"
               required>
+          </div>
+
+          <div>
+            <label for="certificate" class="block mb-2 font-medium text-gray-300">
+              Upload Sertifikat (Opsional, PDF, max 2MB)
+            </label>
+            <input type="file" id="certificate" name="certificate" accept=".pdf"
+              class="w-full text-gray-300 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:font-semibold file:bg-gray-600 file:text-white hover:file:bg-gray-500">
           </div>
 
           <button type="submit"
