--- a/admin.html
+++ b/admin.html
@@ -72,6 +72,10 @@
                 <i class="fa-solid fa-users fa-fw fa-lg min-w-[32px] text-center"></i>
                 <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Pendaftar</span>
             </a>
+            <a href="admin-users.html" class="flex items-center gap-3 px-2 py-2 text-gray-400 hover:bg-gray-700 hover:text-white rounded-lg h-12">
+                <i class="fa-solid fa-address-book fa-fw fa-lg min-w-[32px] text-center"></i>
+                <span class="font-semibold opacity-0 group-hover:opacity-100 transition-opacity duration-200 whitespace-nowrap">Data Pengguna</span>
+            </a>
         </nav>
 
         <div>
