--- a/register.html
+++ b/register.html
@@ -42,6 +42,10 @@
                 <input type="date" name="birth_date" class="date-input-dark-icon w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
             </div>
             <div>
+                <label class="block mb-1 font-medium text-gray-300">Nomor Telepon</label>
+                <input type="tel" name="phone_number" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded" placeholder="Contoh: 081234567890" required>
+            </div>
+            <div>
                 <label class="block mb-1 font-medium text-gray-300">Email</label>
                 <input type="email" name="email" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500" required>
             </div>
