--- a/admin.html
+++ b/admin.html
@@ -100,7 +100,7 @@
             <tr class="border-b border-gray-600">
               <th class="p-3">Nama</th>
               <th class="p-3">NIM</th>
-              <th class="p-3">Divisi</th>
+              <th class="p-3">Pilihan Divisi 1</th> <th class="p-3">Pilihan Divisi 2</th>
               <th class="p-3">Status</th>
               <th class="p-3 text-center">Aksi</th>
             </tr>
@@ -226,7 +226,7 @@
                         <tr class="border-b border-gray-700 hover:bg-gray-700/50">
                             <td class="p-3">${reg.name}</td>
                             <td class="p-3">${reg.nim}</td>
-                            <td class="p-3">${reg.division}</td>
+                            <td class="p-3">${reg.division1}</td> <td class="p-3">${reg.division2}</td>
                             <td class="p-3 font-semibold">${reg.status}</td>
                             <td class="p-3 text-center">
                                 <button onclick="showModal('${reg.id}')" class="px-3 py-1 text-sm bg-blue-600 rounded hover:bg-blue-700">Kelola</button>
