--- a/register.html
+++ b/register.html
@@ -66,6 +66,6 @@
     </div>
     
     <script src="js/auth.js"></script>
-    <script src="js/regiter.js"></script>
+    <script src="js/register.js"></script>
 </body>
 </html>
