--- a/form.html
+++ b/form.html
@@ -81,21 +81,29 @@
       <div class="bg-gray-800 p-8 rounded-lg border border-gray-700">
         <form id="submissionForm" class="space-y-6">
 
-          <div>
-              <label for="division1" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 1 (Prioritas)</label>
-              <select id="division1" name="division1" class="w-full ...">
-                  <option value="BPH">Badan Pengurus Harian</option>
-                  <option value="PSDM">Pengembangan Sumber Daya Mahasiswa</option>
-                  <option value="Humas">Hubungan Masyarakat</option>
-              </select>
-          </div>
-          <div>
-              <label for="division2" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 2</label>
-              <select id="division2" name="division2" class="w-full ...">
-                  <option value="BPH">Badan Pengurus Harian</option>
-                  <option value="PSDM">Pengembangan Sumber Daya Mahasiswa</option>
-                  <option value="Humas">Hubungan Masyarakat</option>
-              </select>
+          <div class="grid grid-cols-1 md:grid-cols-2 md:gap-x-6">
+              <div>
+                  <label for="division1" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 1 (Prioritas)</label>
+                  <select id="division1" name="division1" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
+                      <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
+                      <option value="Kaderisasi">Departemen Kaderisasi</option>
+                      <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
+                      <option value="Multimedia">Departemen Multimedia</option>
+                      <option value="Akademik">Departemen Akademik</option>
+                      <option value="Kepelatihan">Departemen Kepelatihan</option>
+                  </select>
+              </div>
+              <div>
+                  <label for="division2" class="block mb-2 font-medium text-gray-300">Pilihan Divisi 2</label>
+                  <select id="division2" name="division2" class="w-full px-3 py-2 border border-gray-600 bg-gray-700 text-gray-200 rounded focus:outline-none focus:ring-2 focus:ring-red-500">
+                      <option value="Minat dan Bakat">Departemen Minat dan Bakat</option>
+                      <option value="Kaderisasi">Departemen Kaderisasi</option>
+                      <option value="Hubungan Masyarakat">Departemen Hubungan Masyarakat</option>
+                      <option value="Multimedia">Departemen Multimedia</option>
+                      <option value="Akademik">Departemen Akademik</option>
+                      <option value="Kepelatihan">Departemen Kepelatihan</option>
+                  </select>
+              </div>
           </div>
 
           <div>
