--- a/admin.html
+++ b/admin.html
@@ -138,6 +138,8 @@
                             <select id="modalStatus" name="status" class="mt-1 w-full px-3 py-2 border border-gray-600 bg-gray-700 rounded">
                                 <option value="pending">Menunggu</option>
                                 <option value="interview">Wawancara</option>
+                                <option value="selection_1">Seleksi 1</option>
+                                <option value="selection_2">Seleksi 2</option>
                                 <option value="accepted">Diterima</option>
                                 <option value="rejected">Ditolak</option>
                             </select>
