--- a/user.html
+++ b/user.html
@@ -95,7 +95,7 @@
                 <div>
                     <h2 class="text-xl font-semibold text-green-400">Pendaftaran Terkirim!</h2>
                     <p class="text-gray-300 mt-1">Anda telah berhasil mengisi formulir pendaftaran. Nantikan informasi selanjutnya mengenai status Anda.<br>
-                    Jika ada yang perlu ditanyakan silakan chat grup atau hubungi admin <a href="https://wa.me/6283137760847"><strong class="text-white">KLIK DISINI</strong></a>.</p>
+                    Jika ada yang perlu ditanyakan silakan chat grup atau hubungi admin <a href="https://wa.me/6283137760847?text=Jangan lupa 5S nya yaa teman-teman ku tersayang. -Developer"><strong class="text-white">KLIK DISINI</strong></a>.</p>
                 </div>
             </div>
         </div>
